feat(STB3-193): add db lifecycle
